# TOAST

./: .gitignore  DLPFC.ipynb  LICENSE  MouseAtlas.ipynb  MultimodalAligment.ipynb  README.md  pyproject.toml  requirements.txt
data/: README.md
data/simulations/: 1D_sim_t1.csv  1D_sim_t2.csv  2D_sim_t1.csv  2D_sim_t2.csv
examples/: align_anndata_pair.py  align_csv_simulation.py
notebooks/paper_reproduction/: 1d-sim.ipynb  2d-sim.ipynb  Gene_imputation.ipynb  MouseAtlas.ipynb  MultimodalAligment.ipynb  StereoSeq.ipynb
spatial_OT/: OT.py  __init__.py  cli.py  costs.py  io.py  metrics.py  pipeline.py  preprocessing.py  utils.py
toast_spatial_ot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
