[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toast-spatial-ot"
version = "0.1.0"
description = "TOAST: Topography-aware Optimal Transport for spatial omics"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "TOAST Authors" }
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=1.5",
  "scikit-learn>=1.3",
  "networkx>=3.0",
  "POT>=0.9.0",
  "anndata>=0.9",
  "scanpy>=1.9",
]

[project.scripts]
toast = "spatial_OT.cli:main"

[tool.setuptools.packages.find]
include = ["spatial_OT*"]
